--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "assets/global-reset";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
